Download link changed to cdn.rawgit link

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">Numerical-Analysis</h1>
       <h2 class="project-tagline">Numerical Analysis, B.Sc. Electrical and Electronics Engineering, Tel Aviv University</h2>
       <a href="https://github.com/aakashjog/Numerical-Analysis" class="btn">View on GitHub</a>
-      <a href="https://github.com/aakashjog/Numerical-Analysis/raw/master/Notes/Notes.pdf" class="btn">Download lecture notes as .pdf</a>
-      <a href="https://github.com/aakashjog/Numerical-Analysis/raw/master/Recitations/Recitations.pdf" class="btn">Download recitation notes as .pdf</a>
+      <a href="https://cdn.rawgit.com/aakashjog/Numerical-Analysis/master/Notes/Notes.pdf" class="btn">Download lecture notes as .pdf</a>
+      <a href="https://cdn.rawgit.com/aakashjog/Numerical-Analysis/master/Recitations/Recitations.pdf" class="btn">Download recitation notes as .pdf</a>
     </section>
 
     <section class="main-content">
